# shmup_game

./: Cargo.toml  README.md  config.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/: sources.txt
src/: main.rs
src/game_over/: menu.rs  mod.rs
src/gameplay/: bullet.rs  collectables.rs  collisions.rs  enemy.rs  event.rs  loading.rs  mod.rs  player.rs  shared.rs  ui.rs
src/gameplay/levels/: level1.rs  level2.rs  level3.rs  mod.rs
src/landing_screen/: main_menu.rs  mod.rs  options.rs
src/ui/: mod.rs
src/win_game/: mod.rs
