[package]
name = "shmup_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No editor while waiting for it to be update for bevy 0.10.0 compat.
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy_rapier2d = { version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ] }
rand = "0.8.5"
bevy = "0.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy_hanabi]
version = "0.7.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
